fixed overflow bug for users/profile

--- a/src/styles/Editprofile.css
+++ b/src/styles/Editprofile.css
@@ -1,6 +1,6 @@
 .edit-profile, .users-list {
   position: absolute;
-  height: 90vh;
+  height: 100%;
   width: 100%;
   left: -100px;
   z-index: 9999;
